--- a/package.json
+++ b/package.json
@@ -3,7 +3,18 @@
   "version": "0.0.0",
   "main": "index.js",
   "module": "index.js",
-  "keywords": ["typed", "js", "types"],
+  "scripts": {
+    "test": "istanbul cover test/index.js"
+  },
+  "keywords": [
+    "typed",
+    "js",
+    "types"
+  ],
   "author": "Andrea Giammarchi",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "coveralls": "^3.0.4",
+    "istanbul": "^0.4.5"
+  }
 }
