--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "module": "index.js",
   "unpkg": "min.js",
   "scripts": {
-    "build": "npm run rollup && npm run size",
+    "build": "npm run rollup && npm run test && npm run size",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "rollup": "rollup --config rollup.config.js",
     "size": "cat index.js | wc -c;cat min.js | wc -c;gzip -c9 min.js | wc -c",
